backend/test_cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Simple CloudFormation template in JSON format for testing",
  "Parameters": {
    "Environment": {
      "Type": "String",
      "Default": "staging",
      "Description": "Environment name"
    }
  },
  "Resources": {
    "SimpleVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.16.0.0/16",
        "EnableDnsHostnames": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "simple-vpc"
          }
        ]
      }
    },
    "PublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "SimpleVPC"
        },
        "CidrBlock": "172.16.1.0/24",
        "Tags": [
          {
            "Key": "Name",
            "Value": "public-subnet"
          }
        ]
      }
    },
    "WebSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow HTTP and HTTPS",
        "VpcId": {
          "Ref": "SimpleVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "AppBucket": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "AccessControl": "Private",
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256"
              }
            }
          ]
        }
      }
    },
    "ApiFunction": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "FunctionName": "api-function",
        "Runtime": "nodejs18.x",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "ApiRole",
            "Arn"
          ]
        },
        "Code": {
          "ZipFile": "exports.handler = async (event) => { return { statusCode: 200 }; };"
        }
      }
    },
    "ApiRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              },
              "Action": "sts:AssumeRole"
            }
          ]
        },
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
        ]
      }
    },
    "WebLoadBalancer": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Name": "web-lb",
        "Type": "application",
        "Scheme": "internet-facing",
        "Subnets": [
          {
            "Ref": "PublicSubnet"
          }
        ],
        "SecurityGroups": [
          {
            "Ref": "WebSecurityGroup"
          }
        ]
      }
    }
  },
  "Outputs": {
    "VPCId": {
      "Description": "VPC ID",
      "Value": {
        "Ref": "SimpleVPC"
      }
    },
    "BucketName": {
      "Description": "S3 Bucket Name",
      "Value": {
        "Ref": "AppBucket"
      }
    }
  }
}
